# csved

./: .gitignore  README.rst  pyproject.toml
src/csved/: __main__.py
src/csved/cmp/: __init__.py
src/csved/cmp/row/: __init__.py  cmp_row.py
src/csved/cp/: __init__.py
src/csved/cp/row/: __init__.py  cp_row.py
src/csved/csv/: read.py  write.py
src/csved/delete/: __init__.py
src/csved/delete/col/: __init__.py  delete_col.py
src/csved/delete/row/: __init__.py  delete_row.py
src/csved/ed/: __init__.py
src/csved/ed/cell/: __init__.py  ed_cell.py
src/csved/ed/row/: __init__.py  ed_row.py
src/csved/hello/: __init__.py  __main__.py  hello.py
src/csved/insert/: __init__.py
src/csved/insert/col/: __init__.py  insert_col.py
src/csved/insert/row/: __init__.py  insert_row.py
src/csved/isempty/: __init__.py
src/csved/isempty/row/: __init__.py  isempty_row.py
src/csved/ls/: __init__.py  __main__.py
src/csved/ls/cell/: __init__.py  ls_cell.py
src/csved/ls/col/: __init__.py  __main__.py  ls_col.py
src/csved/ls/row/: __init__.py  __main__.py  ls_row.py
