[build-system]
    requires = ["setuptools >= 77.0.3"]
    build-backend = "setuptools.build_meta"
[project]
    name = "csved"
    version = "0.0.2"
    authors = [
        { name="Jacob Striebel", email="author@example.com" }
    ]
    description = "csv file editor with cli and api"
    readme = "README.rst"
    license = "MIT"
    license-files = [ "LICENSE" ]
[project.urls]
    Homepage = "https://github.com/striebel/csved"
[project.scripts]
    csved = "csved.__main__:main"
